Updated documentation report/thesis to v1.5.1 + Reorganised 'About'

--- a/content/.vuepress/styles/index.scss
+++ b/content/.vuepress/styles/index.scss
@@ -1,7 +1,7 @@
 :root {
   // brand colors
   --c-brand: #3e78af;
-  --c-brand-light: #3e78af;
+  --c-brand-light: #4985bf;
 
   // custom container colors
   --c-tip: #3e78af;
@@ -10,7 +10,7 @@
 html.dark {
   // brand colors
   --c-brand: #3e78af;
-  --c-brand-light: #3e78af;
+  --c-brand-light: #4985bf;
 
   // custom container colors
   --c-tip: #3e78af;
